# market-monitor

./: .env.example  .gitignore  README.md  docker-compose.yml  vercel.json
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_product_category.py
backend/app/: config.py  database.py  main.py
backend/app/api/: competitors.py  cron.py  events.py  exports.py  products.py  search_dashboard_settings.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: default_competitors.py  detection.py  notification.py  scraper.py
backend/app/utils/: __init__.py  price_parser.py  text_normalizer.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: test_core.py
frontend/: index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: CompetitorForm.tsx
frontend/src/components/layout/: Sidebar.tsx
frontend/src/components/ui/: index.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: Activity.tsx  Competitors.tsx  Dashboard.tsx  Exports.tsx  MarketSearch.tsx  ProductDetail.tsx  Products.tsx  SalesTrends.tsx  Settings.tsx
