[project]
name = "market-monitor-api"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "sqlalchemy==2.0.30",
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.9",
    "pydantic==2.7.1",
    "pydantic-settings==2.3.0",
    "celery==5.4.0",
    "redis==5.0.6",
    "playwright==1.44.0",
    "httpx==0.27.0",
    "python-dotenv==1.0.1",
    "python-dateutil==2.9.0",
    "pytz==2024.1",
    "aiohttp==3.9.5",
    "tenacity==8.3.0",
    "greenlet==3.0.3",
]
